# matrix

./: CMakeLists.txt  workspace.code-workspace  ТЗ.txt
inc/: Matrix.hpp
src/: Matrix.cpp
test/: TestMatrix.cpp
